Src/Newt/NewtonDynamics/Import/Newton.h

typedef struct NewtonMesh{} NewtonMesh;
typedef struct NewtonBody{} NewtonBody;
typedef struct NewtonWorld{} NewtonWorld;
typedef struct NewtonJoint{} NewtonJoint;
typedef struct NewtonCollision{} NewtonCollision;
typedef struct NewtonJointRecord NewtonJointRecord;
typedef struct NewtonHingeSliderUpdateDesc NewtonHingeSliderUpdateDesc;
struct NewtonJointRecord
{
  dFloat m_attachmenMatrix_0[4][4];
  dFloat m_attachmenMatrix_1[4][4];
  dFloat m_minLinearDof[3];
  dFloat m_maxLinearDof[3];
  dFloat m_minAngularDof[3];
  dFloat m_maxAngularDof[3];
  const NewtonBody* m_attachBody_0;
  const NewtonBody* m_attachBody_1;
  dFloat m_extraParameters[16];
  int	m_bodiesCollisionOn;
  char m_descriptionType[32];
} ;
struct NewtonHingeSliderUpdateDesc
{
  dFloat m_accel;
  dFloat m_minFriction;
  dFloat m_maxFriction;
  dFloat m_timestep;
} ;
typedef unsigned (*NewtonUniversalCallBack) (const NewtonJoint* const universal, NewtonHingeSliderUpdateDesc* const desc);
typedef void (*NewtonUserBilateralCallBack) (const NewtonJoint* const userJoint, dFloat timestep, int threadIndex);
typedef void (*NewtonUserBilateralGetInfoCallBack) (const NewtonJoint* const userJoint, NewtonJointRecord* const info);
NEWTON_API void NewtonCorkscrewGetJointForce (const NewtonJoint* const corkscrew, dFloat* const force);
NEWTON_API dFloat NewtonCorkscrewCalculateStopAlpha (const NewtonJoint* const corkscrew, const NewtonHingeSliderUpdateDesc* const desc, dFloat angle);
NEWTON_API dFloat NewtonCorkscrewCalculateStopAccel (const NewtonJoint* const corkscrew, const NewtonHingeSliderUpdateDesc* const desc, dFloat position);
// **********************************************************************************************
//
// Universal joint functions
//
// **********************************************************************************************
NEWTON_API NewtonJoint* NewtonConstraintCreateUniversal (const NewtonWorld* const newtonWorld,
                             const dFloat* pivotPoint, const dFloat* pinDir0, const dFloat* pinDir1,
                             const NewtonBody* const childBody, const NewtonBody* const parentBody);
NEWTON_API void NewtonUniversalSetUserCallback (const NewtonJoint* const universal, NewtonUniversalCallBack callback);
NEWTON_API dFloat NewtonUniversalGetJointAngle0 (const NewtonJoint* const universal);
NEWTON_API dFloat NewtonUniversalGetJointAngle1 (const NewtonJoint* const universal);
NEWTON_API dFloat NewtonUniversalGetJointOmega0 (const NewtonJoint* const universal);
NEWTON_API dFloat NewtonUniversalGetJointOmega1 (const NewtonJoint* const universal);
NEWTON_API void NewtonUniversalGetJointForce (const NewtonJoint* const universal, dFloat* const force);
NEWTON_API dFloat NewtonUniversalCalculateStopAlpha0 (const NewtonJoint* const universal, const NewtonHingeSliderUpdateDesc* const desc, dFloat angle);
NEWTON_API dFloat NewtonUniversalCalculateStopAlpha1 (const NewtonJoint* const universal, const NewtonHingeSliderUpdateDesc* const desc, dFloat angle);
// **********************************************************************************************
//
// Up vector joint functions
//
// **********************************************************************************************
NEWTON_API NewtonJoint* NewtonConstraintCreateUpVector (const NewtonWorld* const newtonWorld, const dFloat* pinDir, const NewtonBody* const body);
NEWTON_API void NewtonUpVectorGetPin (const NewtonJoint* const upVector, dFloat *pin);
NEWTON_API void NewtonUpVectorSetPin (const NewtonJoint* const upVector, const dFloat *pin);
// **********************************************************************************************
//
// User defined bilateral Joint
//
// **********************************************************************************************
NEWTON_API NewtonJoint* NewtonConstraintCreateUserJoint (const NewtonWorld* const newtonWorld, int maxDOF,
                             NewtonUserBilateralCallBack callback,
                             NewtonUserBilateralGetInfoCallBack getInfo,
                             const NewtonBody* const childBody, const NewtonBody* const parentBody) ;
NEWTON_API void NewtonUserJointSetFeedbackCollectorCallback (const NewtonJoint* const joint, NewtonUserBilateralCallBack getFeedback);
NEWTON_API void NewtonUserJointAddLinearRow (const NewtonJoint* const joint, const dFloat* const pivot0, const dFloat* const pivot1, const dFloat* const dir);
NEWTON_API void NewtonUserJointAddAngularRow (const NewtonJoint* const joint, dFloat relativeAngle, const dFloat* const dir);
NEWTON_API void NewtonUserJointAddGeneralRow (const NewtonJoint* const joint, const dFloat* const jacobian0, const dFloat* const jacobian1);
NEWTON_API void NewtonUserJointSetRowMinimumFriction (const NewtonJoint* const joint, dFloat friction);
NEWTON_API void NewtonUserJointSetRowMaximumFriction (const NewtonJoint* const joint, dFloat friction);
NEWTON_API void NewtonUserJointSetRowAcceleration (const NewtonJoint* const joint, dFloat acceleration);
NEWTON_API void NewtonUserJointSetRowSpringDamperAcceleration (const NewtonJoint* const joint, dFloat springK, dFloat springD);
NEWTON_API void NewtonUserJointSetRowStiffness (const NewtonJoint* const joint, dFloat stiffness);
NEWTON_API dFloat NewtonUserJointGetRowForce (const NewtonJoint* const joint, int row);
// **********************************************************************************************
//
// Mesh joint functions
//
// **********************************************************************************************
NEWTON_API NewtonMesh* NewtonMeshCreate(const NewtonWorld* const newtonWorld);
NEWTON_API NewtonMesh* NewtonMeshCreateFromMesh(const NewtonMesh* const mesh);
NEWTON_API NewtonMesh* NewtonMeshCreateFromCollision(const NewtonCollision* const collision);
NEWTON_API NewtonMesh* NewtonMeshConvexHull (const NewtonWorld* const newtonWorld, int count, const dFloat* const vertexCloud, int strideInBytes, dFloat tolerance);
NEWTON_API NewtonMesh* NewtonMeshCreatePlane (const NewtonWorld* const newtonWorld, const dFloat* const locationMatrix, dFloat witdth, dFloat breadth, int material, const dFloat* const textureMatrix0, const dFloat* const textureMatrix1);
NEWTON_API void NewtonMeshDestroy(const NewtonMesh* const mesh);
NEWTON_API void NewtonMeshCalculateOOBB(const NewtonMesh* const mesh, dFloat* const matrix, dFloat* const x, dFloat* const y, dFloat* const z);
NEWTON_API void NewtonMeshCalculateVertexNormals(const NewtonMesh* const mesh, dFloat angleInRadians);
NEWTON_API void NewtonMeshApplySphericalMapping(const NewtonMesh* const mesh, int material);
NEWTON_API void NewtonMeshApplyBoxMapping(const NewtonMesh* const mesh, int front, int side, int top);
NEWTON_API void NewtonMeshApplyCylindricalMapping(const NewtonMesh* const mesh, int cylinderMaterial, int capMaterial);
NEWTON_API int NewtonMeshIsOpenMesh (const NewtonMesh* const mesh);
NEWTON_API void NewtonMeshFixTJoints (const NewtonMesh* const mesh);
NEWTON_API void NewtonMeshPolygonize (const NewtonMesh* const mesh);
NEWTON_API void NewtonMeshTriangulate (const NewtonMesh* const mesh);
NEWTON_API NewtonMesh* NewtonMeshUnion (const NewtonMesh* const mesh, const NewtonMesh* const clipper, const dFloat* const clipperMatrix);
NEWTON_API NewtonMesh* NewtonMeshDifference (const NewtonMesh* const mesh, const NewtonMesh* const clipper, const dFloat* const clipperMatrix);
NEWTON_API NewtonMesh* NewtonMeshIntersection (const NewtonMesh* const mesh, const NewtonMesh* const clipper, const dFloat* const clipperMatrix);
NEWTON_API void NewtonMeshClip (const NewtonMesh* const mesh, const NewtonMesh* const clipper, const dFloat* const clipperMatrix, NewtonMesh** const topMesh, NewtonMesh** const bottomMesh);
NEWTON_API NewtonMesh* NewtonMeshVoronoiDecomposition (const NewtonMesh* const mesh, int pointCount, int pointStrideInBytes, const dFloat* const pointCloud, int internalMaterial, const dFloat* const textureMatrix);
NEWTON_API void NewtonRemoveUnusedVertices(const NewtonMesh* const mesh, int* const vertexRemapTable);
NEWTON_API void NewtonMeshBeginFace(const NewtonMesh* const mesh);
NEWTON_API void NewtonMeshAddFace(const NewtonMesh* const mesh, int vertexCount, const dFloat* const vertex, int strideInBytes, int materialIndex);
NEWTON_API void NewtonMeshEndFace(const NewtonMesh* const mesh);
NEWTON_API void NewtonMeshBuildFromVertexListIndexList(const NewtonMesh* const mesh,
                             int faceCount, const int* const faceIndexCount, const int* const faceMaterialIndex,
                             const dFloat* const vertex, int vertexStrideInBytes, const int* const vertexIndex,
                             const dFloat* const normal, int normalStrideInBytes, const int* const normalIndex,
                             const dFloat* const uv0, int uv0StrideInBytes, const int* const uv0Index,
                             const dFloat* const uv1, int uv1StrideInBytes, const int* const uv1Index);
NEWTON_API void NewtonMeshGetVertexStreams (const NewtonMesh* const mesh,
                      int vertexStrideInByte, dFloat* const vertex,
                      int normalStrideInByte, dFloat* const normal,
                      int uvStrideInByte0, dFloat* const uv0,
                      int uvStrideInByte1, dFloat* const uv1);