Src/Newt/NewtonDynamics/Import/DllImports.cs


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonCorkscrewGetJointForce(IntPtr corkscrew, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] force);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonCorkscrewCalculateStopAlpha(IntPtr corkscrew, IntPtr desc, float angle);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonCorkscrewCalculateStopAccel(IntPtr corkscrew, IntPtr desc, float position);

		#endregion
		#region Universal joint functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonConstraintCreateUniversal(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pivotPoint, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pinDir0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pinDir1, IntPtr childBody, IntPtr parentBody);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUniversalSetUserCallback(IntPtr universal, NewtonUniversalCallBack callback);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonUniversalGetJointAngle0(IntPtr universal);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonUniversalGetJointAngle1(IntPtr universal);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonUniversalGetJointOmega0(IntPtr universal);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonUniversalGetJointOmega1(IntPtr universal);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUniversalGetJointForce(IntPtr universal, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] force);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonUniversalCalculateStopAlpha0(IntPtr universal, IntPtr desc, float angle);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonUniversalCalculateStopAlpha1(IntPtr universal, IntPtr desc, float angle);

		#endregion
		#region Up vector joint functions

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonConstraintCreateUpVector(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pinDir, IntPtr body);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUpVectorGetPin(IntPtr upVector, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pin);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUpVectorSetPin(IntPtr upVector, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pin);

		#endregion
		#region User defined bilateral Joint

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonConstraintCreateUserJoint(IntPtr newtonWorld, int maxDOF, NewtonUserBilateralCallBack callback, NewtonUserBilateralGetInfoCallBack getInfo, IntPtr childBody, IntPtr parentBody);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUserJointSetFeedbackCollectorCallback(IntPtr joint, NewtonUserBilateralCallBack getFeedback);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUserJointAddLinearRow(IntPtr joint, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pivot0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] pivot1, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] dir);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUserJointAddAngularRow(IntPtr joint, float relativeAngle, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] dir);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUserJointAddGeneralRow(IntPtr joint, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] jacobian0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] jacobian1);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUserJointSetRowMinimumFriction(IntPtr joint, float friction);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUserJointSetRowMaximumFriction(IntPtr joint, float friction);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUserJointSetRowAcceleration(IntPtr joint, float acceleration);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUserJointSetRowSpringDamperAcceleration(IntPtr joint, float springK, float springD);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonUserJointSetRowStiffness(IntPtr joint, float stiffness);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern float NewtonUserJointGetRowForce(IntPtr joint, int row);

		#endregion

		#region Mesh functions

		//	Not sure why this was called Mesh joint functions.  This seems to be a custom implementation a mesh (not sure how closely it mirrors wpf's Geometry3D)

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshCreate(IntPtr newtonWorld);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshCreateFromMesh(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshCreateFromCollision(IntPtr collision);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshConvexHull(IntPtr newtonWorld, int count, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]float[] vertexCloud, int strideInBytes, float tolerance);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshCreatePlane(IntPtr newtonWorld, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] locationMatrix, float witdth, float breadth, int material, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] textureMatrix0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] textureMatrix1);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshDestroy(IntPtr mesh);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshCalculateOOBB(IntPtr mesh, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] matrix, ref float x, ref float y, ref float z);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshCalculateVertexNormals(IntPtr mesh, float angleInRadians);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshApplySphericalMapping(IntPtr mesh, int material);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshApplyBoxMapping(IntPtr mesh, int front, int side, int top);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshApplyCylindricalMapping(IntPtr mesh, int cylinderMaterial, int capMaterial);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern int NewtonMeshIsOpenMesh(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshFixTJoints(IntPtr mesh);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshPolygonize(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshTriangulate(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshUnion(IntPtr mesh, IntPtr clipper, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] clipperMatrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshDifference(IntPtr mesh, IntPtr clipper, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] clipperMatrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshIntersection(IntPtr mesh, IntPtr clipper, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] clipperMatrix);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshClip(IntPtr mesh, IntPtr clipper, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] clipperMatrix, IntPtr topMesh, IntPtr bottomMesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshConvexDecomposition(IntPtr mesh, int maxCount);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern IntPtr NewtonMeshVoronoiDecomposition(IntPtr mesh, int pointCount, int pointStrideInBytes, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]float[] pointCloud, int internalMaterial, [MarshalAs(UnmanagedType.LPArray, SizeConst = 16)]float[] textureMatrix);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonRemoveUnusedVertices(IntPtr mesh, [MarshalAs(UnmanagedType.LPArray/*, SizeConst = */)]int[] vertexRemapTable);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshBeginFace(IntPtr mesh);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshAddFace(IntPtr mesh, int vertexCount, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vertex, int strideInBytes, int materialIndex);

		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshEndFace(IntPtr mesh);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshBuildFromVertexListIndexList(IntPtr mesh, int faceCount, ref int faceIndexCount, ref int faceMaterialIndex, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vertex, int vertexStrideInBytes, ref int vertexIndex, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normal, int normalStrideInBytes, ref int normalIndex, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] uv0, int uv0StrideInBytes, ref int uv0Index, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] uv1, int uv1StrideInBytes, ref int uv1Index);


		[DllImport("newton.dll", CallingConvention = CallingConvention.Cdecl)]
		internal static extern void NewtonMeshGetVertexStreams(IntPtr mesh, int vertexStrideInByte, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] vertex, int normalStrideInByte, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] normal, int uvStrideInByte0, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] uv0, int uvStrideInByte1, [MarshalAs(UnmanagedType.LPArray, SizeConst = 3)]float[] uv1);
